src/objects/Account_Banking_System_Debt_Summary__c.object
<CustomObject>
    <fields>
        <fullName>account_id__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Banking System Debt Summary</relationshipLabel>
        <relationshipName>Account_Banking_System_Debt_Summary</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>debt_current_vs_dec_balance_amount__c</fullName>
        <label>Current month vs December</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>debt_current_vs_previous_balance_amount__c</fullName>
        <label>Current month vs Previous month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>l2_product_group_name__c</fullName>
        <label>Classification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>quote_impact_desc__c</fullName>
        <label>Quote Impact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>unique_id__c</fullName>
		<externalId>true</externalId>
        <label>Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>year_month_day_date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>is_last_date__c</fullName>
        <formula>IF(  year_month_day_date__c =  account_id__r.account_banking_syst_debt_sum_last_date__c  ,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is last date?</label>
        <type>Checkbox</type>
    </fields>
    <label>Resumen Información SBS</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>account_id__c</columns>
        <columns>year_month_day_date__c</columns>
        <columns>quote_impact_desc__c</columns>
        <columns>debt_current_vs_previous_balance_amount__c</columns>
        <columns>debt_current_vs_dec_balance_amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ABSDS-{0000000000}</displayFormat>
        <label>Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resumen Información SBS</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>